--- a/BIN/Template.html
+++ b/BIN/Template.html
@@ -188,7 +188,7 @@
         </div>
         <div class="log">
             <h3>Running log:</h3>
-            <div><p class="Detail_text">{{log}}</p></div>
+            <div><p>{{log}}</p></div>
         </div>
     </div>
 </main>
