--- a/bin/Template.html
+++ b/bin/Template.html
@@ -48,20 +48,10 @@
 <nav>
     <ul>
         {% if type %}
-        <li><a href="#Dected">Dected</a>
+        <li><a href="#Result">Result</a>
             <ul>
                 {% for key in type.keys() %}
                 <li><a href="#{{ key | replace(' ', '_') }}">{{key | replace('_', ' ') | title}}</a></li>
-                {% endfor %}
-            </ul>
-        </li>
-        {% endif %}
-        {% if undected %}
-        <li><a href="#Undected">Undected</a>
-            <ul>
-                {% for undect_key in res["Undected"].keys() %}
-                <li><a href="#undected_{{ undect_key | replace(' ', '_') }}">
-                    {{undect_key | replace('_', ' ') | title}}</a></li>
                 {% endfor %}
             </ul>
         </li>
@@ -72,8 +62,8 @@
 <main>
     <div id="main_top"></div>
     {% if type %}
-    <div id="Dected">
-        <h2>Dected</h2>
+    <div id="Result">
+        <h2>Report</h2>
         {% for key, value in type.items() %}
         <div class="section">
             <h2 id="{{ key | replace(' ', '_') }}" class="Dected_title">{{key | replace('_', ' ') | title}}</h2>
@@ -82,8 +72,11 @@
                 <tr>
                     <th>Name</th>
                     {% if value == "quan" %}
+<!--
                     <th>OR</th>
                     <th>Percentage</th>
+-->
+					<th>Risk</th>
                     {% else %}
                     <th> Result</th>
                     {% endif %}
@@ -95,8 +88,20 @@
                     <td><a href="#{{ indicator['Name'] | replace(' ', '_') }}">
                         {{ indicator['Name'] | replace('_', ' ') | title }}</a></td>
                     {% if value == "quan" %}
-                    <td>{{ indicator['Outcome'] | round(2) }}</td>
-                    <td>{{ indicator['Distribution']['Percentage'] | round(2) }}%</td>
+					{% if indicator['Status'] == True %}
+<!--                    <td>{{ indicator['Outcome'] | round(2) }}</td>-->
+<!--                    <td>{{ indicator['Distribution']['Percentage'] | round(2) }}%</td>-->
+					{% if indicator['Distribution']['Percentage'] < 100 and indicator['Distribution']['Percentage'] > 75 %}
+					   <td style="background-color: crimson">High risk</td>
+					{% elif indicator['Distribution']['Percentage'] <= 75 and indicator['Distribution']['Percentage'] >= 25 %}
+						<td style="background-color: dodgerblue">Normal</td>
+					{% else %}
+						<td style="background-color: greenyellow">Low risk</td>
+					{% endif %}
+					{% else %}
+					<td>Undected</td>
+<!--					<td>Undected</td>-->
+					{% endif %}
                     {% else %}
                     <td>{{ indicator['Outcome'] | capitalize }}</td>
                     {% endif %}
@@ -109,7 +114,8 @@
                 {% for indicator in res[key] %}
                 <div id="{{ indicator['Name'] | replace(' ', '_') }}">
                     <h3>{{ indicator['Name'] | replace('_', ' ') | title }}</h3>
-                    {% if value == "qual" %}
+                    {% if indicator['Status'] == True %}
+					{% if value == "qual" %}
                     <div class="detail_block">
                         <h4><a style="float:left">Outcome:</a></h4>
                         <p>{{ indicator['Outcome'] | capitalize }}</p>
@@ -142,6 +148,18 @@
                         </ul>
                     </div>
                     {% endif %}
+					{% else %}
+					<div class="detail_block">
+                        <h4><a style="float:left">Outcome:</a></h4>
+                        <p>{{ indicator['Outcome'] | capitalize }}</p>
+                        <h4>Scentific detail: </h4>
+                        <ul>
+                            {% for rs in indicator['Detail'] %}
+                            <li>{{ rs | replace("'", '') | replace("{", '') | replace("}", "") }}</li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+					{% endif %}
                 </div>
                 {% endfor %}
             </div>
@@ -149,18 +167,6 @@
         {% endfor %}
         {% endif %}
     </div>
-    {% if undected %}
-    <div class="section">
-        <h2 id="Undected">Undected</h2>
-        <div style="padding-left: 1.5em">
-            {% for undect_key, value in res["Undected"].items() %}
-            <p id="undected_{{ undect_key | replace(' ', '_') }}" class="miss_h3">
-                {{ undect_key | replace('_', ' ') | title}}</p>
-            <p class="Detail_text"> {{ value }}</p>
-            {% endfor %}
-        </div>
-    </div>
-    {% endif %}
 
     <div class="section">
         <h2 id="Report_detail">Report detail</h2>
