--- a/bin/Template.html
+++ b/bin/Template.html
@@ -191,13 +191,13 @@
             {% endif %}
             {% if extra_res[0][1] %}
             <h3>Population stratification analysis:</h3>
-                <div style="float: left; display: inline-block; width: 43%">
-                    <h3>PCA</h3>
+                <div style="width: 75%">
+                    <h3 style="text-align: center">PCA</h3>
                     <img src="./html_files/img/QC_PCA.png" alt="Principal Components of Sample based on reference"
                          width="100%">
                 </div>
-                <div style="display: inline-block; clear: right; width: 43%">
-                    <h3>UMAP</h3>
+                <div style="width: 75%">
+                    <h3 style="text-align: center">UMAP</h3>
                     <img src="./html_files/img/QC_UMAP.png" alt="UMAP result of Sample based on reference"
                          width="100%">
                 </div>
