--- a/bin/Template.html
+++ b/bin/Template.html
@@ -700,8 +700,8 @@
                 and to generate a QR code. This feature is expected to facilitate genetic data transmission and
                 encryption, while increasing the possibility to maintain individual privacy.</p>
             <div style="float: left; display: inline-block; width: 43%">
-            <h3>Doctor QR code:</h3>
-            <img src="./html_files/img/dr_qr_code.png" alt="Doctor QR code" width="100%" >
+            <h3>SNP list QR code:</h3>
+            <img src="./html_files/img/dr_qr_code.png" alt="SNP list QR code" width="100%" >
             </div>
             <div style="display: inline-block; clear: right; width: 43%">
             <h3>User QR code:</h3>
